<resources>
    <string name="app_name">December_Project_2</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_id">Student ID</string>
    <string name="title_activity_day_timetable">DayTimetableActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="university_logo">University Logo</string>
    <string name="sign_in">Sign IN</string>
    <string name="test">TEST</string>
    <string name="first">First page</string>
    <string name="last">Last page</string>
    <string name="hello_world">Hello World</string>
</resources>
